--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -12,6 +12,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      should_echo:
+        description: Set yes when echo.
+        required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -31,6 +35,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run bin/echo
+        if: ${{ github.event.inputs.should_echo == 'yes' }}
         env:
           HELLO_WORLD: Hello,World!
         run: ./bin/echo
